<resources>
    <string name="app_name">Calculator</string>
    <string name="initial_screen_value" translatable="false">0</string>
    <string name="symbol_clear">C</string>
    <string name="symbol_toggle_sign" translatable="false">+/-</string>
    <string name="symbol_percentage" translatable="false">%</string>
    <string name="symbol_division" translatable="false">÷</string>
    <string name="symbol_multiplication" translatable="false">×</string>
    <string name="symbol_addition" translatable="false">+</string>
    <string name="symbol_subtraction" translatable="false">-</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="number_one" translatable="false">1</string>
    <string name="number_two" translatable="false">2</string>
    <string name="number_three" translatable="false">3</string>
    <string name="number_four" translatable="false">4</string>
    <string name="number_five" translatable="false">5</string>
    <string name="number_six" translatable="false">6</string>
    <string name="number_seven" translatable="false">7</string>
    <string name="number_eight" translatable="false">8</string>
    <string name="number_nine" translatable="false">9</string>
    <string name="symbol_equals">=</string>
    <string name="symbol_dot">.</string>
</resources>